# models/Ingrediente.go
@@ -3,15 +3,15 @@ package models
 import "github.com/beego/beego/v2/client/orm"
 
 type Ingrediente struct {
-	PK_ID_INGREDIENTE int64  `orm:"pk" json:"PK_ID_INGREDIENTE"`
-	NOMBRE            string `json:"NOMBRE"`
-	TIPO              string `json:"TIPO"`
-	PESO              int64  `json:"PESO"`
-	CALORIAS          int64  `json:"CALORIAS"`
-	PK_ID_INVENTARIO  *int64 `orm:"null" json:"PK_ID_INVENTARIO"`
+	PK_ID_INGREDIENTE int64  `orm:"column(PK_ID_INGREDIENTE);pk" json:"PK_ID_INGREDIENTE"`
+	NOMBRE            string `orm:"column(NOMBRE)" json:"NOMBRE"`
+	TIPO              string `orm:"column(TIPO)" json:"TIPO"`
+	PESO              int64  `orm:"column(PESO)" json:"PESO"`
+	CALORIAS          int64  `orm:"column(CALORIAS)" json:"CALORIAS"`
+	PK_ID_INVENTARIO  *int64 `orm:"column(PK_ID_INVENTARIO);null" json:"PK_ID_INVENTARIO"`
 }
 
-func (c *Ingrediente) TableName() string {
+func (i *Ingrediente) TableName() string {
 	return "INGREDIENTE"
 }
 
